# watershed

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  bashcalc.sh  cmake_install.cmake  simula.sh  watershed.cxx
Images/: tcc_1input.dcm  tcc_2diffusion.dcm  tcc_3gradient.dcm  tcc_4laplace.dcm  tcc_5adder.dcm  tcc_6inverter.dcm  tcc_7watershed.dcm
